# drivermonitoring

./: .gitignore  Directory.Build.props  Directory.Build.targets  FileMonitor.sln  README.md
.github/workflows/: release.yml
live/examples/csharp/: Example.Client.csproj  Program.cs  README.md
live/examples/python/: README.md  client.py  generate_stubs.bat  requirements.txt
proto/: file_monitor.proto
scripts/: Build-Driver.ps1  Install-Driver.bat  Manage-Service.bat  Uninstall-Driver.bat
src/FileMonitor.Client/: FileMonitor.Client.csproj  FileMonitorClient.cs
src/FileMonitor.Live/: DriverManager.cs  FileMonitor.Live.csproj  LiveEventBroadcaster.cs  LiveFileMonitorGrpcService.cs  Program.cs  ServiceManager.cs
src/FileMonitor.SampleApp/: FileMonitor.SampleApp.csproj  Program.cs
src/FileMonitor.Service/: FileMonitor.Service.csproj  Program.cs
src/FileMonitor.Service/Driver/: DriverCommunication.cs  DriverProtocol.cs  FilterApi.cs
src/FileMonitor.Service/Properties/: launchSettings.json
src/FileMonitor.Service/Services/: DriverListenerWorker.cs  EventBroadcaster.cs  FileMonitorGrpcService.cs
src/driver/FileMonitorDriver/: CMakeLists.txt  FileMonitorDriver.def  FileMonitorDriver.inf  FileMonitorDriver.vcxproj  driver.c  driver.h  makefile.inc  shared.h
